--- a/𝙿𝙰𝟷_𝚝𝚎𝚖𝚙𝚕𝚊𝚝𝚎.md
+++ b/𝙿𝙰𝟷_𝚝𝚎𝚖𝚙𝚕𝚊𝚝𝚎.md
@@ -22,8 +22,8 @@ library("data.table")
 library(ggplot2)
 
 fileUrl <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
-download.file(fileUrl, destfile = paste0(getwd(), '/repdata%2Fdata%2Factivity.zip'), method = "curl")
-unzip("repdata%2Fdata%2Factivity.zip",exdir = "data")
+download.file(fileUrl, destfile = paste0(getwd(), 'activity.zip'), method = "curl")
+unzip("activity.zip",exdir = "data")
 
 Reading csv Data into Data.Table.
 
@@ -34,51 +34,4 @@ What is mean total number of steps taken per day?
     Calculate the total number of steps taken per day
 
 Total_Steps <- activityDT[, c(lapply(.SD, sum, na.rm = FALSE)), .SDcols = c("steps"), by = .(date)] 
-
-head(Total_Steps, 10)
-
-##           date steps
-##  1: 2012-10-01    NA
-##  2: 2012-10-02   126
-##  3: 2012-10-03 11352
-##  4: 2012-10-04 12116
-##  5: 2012-10-05 13294
-##  6: 2012-10-06 15420
-##  7: 2012-10-07 11015
-##  8: 2012-10-08    NA
-##  9: 2012-10-09 12811
-## 10: 2012-10-10  9900
-
-    If you do not understand the difference between a histogram and a barplot, research the difference between them. Make a histogram of the total number of steps taken each day.
-
-ggplot(Total_Steps, aes(x = steps)) +
-    geom_histogram(fill = "blue", binwidth = 1000) +
-    labs(title = "Daily Steps", x = "Steps", y = "Frequency")
-
-
-Total_Steps[, .(Mean_Steps = mean(steps, na.rm = TRUE), Median_Steps = median(steps, na.rm = TRUE))]
-
-##    Mean_Steps Median_Steps
-## 1:   10766.19        10765
-
-
-IntervalDT[steps == max(steps), .(max_interval = interval)]
-
-##    max_interval
-## 1:          835
-
-
-    Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
-
-##     steps       date interval Day of Week weekday or weekend
-##  1:    NA 2012-10-01        0      Monday            weekday
-##  2:    NA 2012-10-01        5      Monday            weekday
-##  3:    NA 2012-10-01       10      Monday            weekday
-##  4:    NA 2012-10-01       15      Monday            weekday
-##  5:    NA 2012-10-01       20      Monday            weekday
-##  6:    NA 2012-10-01       25      Monday            weekday
-##  7:    NA 2012-10-01       30      Monday            weekday
-##  8:    NA 2012-10-01       35      Monday            weekday
-##  9:    NA 2012-10-01       40      Monday            weekday
-## 10:    NA 2012-10-01       45      Monday            weekday
 
