--- a/𝙿𝙰𝟷_𝚝𝚎𝚖𝚙𝚕𝚊𝚝𝚎.md
+++ b/𝙿𝙰𝟷_𝚝𝚎𝚖𝚙𝚕𝚊𝚝𝚎.md
@@ -1,4 +1,4 @@
-Introduction
+## Introduction
 
 It is now possible to collect a large amount of data about personal movement using activity monitoring devices such as a Fitbit, Nike Fuelband, or Jawbone Up. These type of devices are part of the “quantified self” movement – a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. But these data remain under-utilized both because the raw data are hard to obtain and there is a lack of statistical methods and software for processing and interpreting the data.
 
@@ -8,7 +8,7 @@ The data for this assignment can be downloaded from the course web site:
 
     Dataset: Activity monitoring data
 
-The variables included in this dataset are:
+## The variables included in this dataset are:
 
 steps: Number of steps taking in a 5-minute interval (missing values are coded as 𝙽𝙰)
 date: The date on which the measurement was taken in YYYY-MM-DD format
